--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     #map-container {
       width: 100%;
       height: 100%;
-      background-color: #fff;
       position: relative;
       overflow: hidden;
       touch-action: none;
@@ -25,7 +24,6 @@
       position: absolute;
       top: 0;
       left: 0;
-      user-select: none;
       transform-origin: 0 0;
     }
     .tile {
@@ -38,12 +36,12 @@
       position: absolute;
       width: 50px;
       height: 50px;
-      background-image: url('images/icon.png');
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
       z-index: 10;
       pointer-events: auto;
+      border-radius: 50%;
     }
     .tooltip {
       position: absolute;
@@ -68,262 +66,251 @@
       width: 100vw;
       height: 100vh;
       background: rgba(0, 0, 0, 0.9);
-      display: flex;
+      display: none;
       align-items: center;
       justify-content: center;
       z-index: 2000;
-      display: none;
     }
     .modal img {
       max-width: 90vw;
       max-height: 90vh;
     }
+    #filter-panel {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background: white;
+      padding: 10px;
+      border-radius: 6px;
+      z-index: 1001;
+      font-family: sans-serif;
+      font-size: 14px;
+    }
   </style>
 </head>
 <body>
-<div id="map-container">
-  <div id="map-wrapper"></div>
-</div>
-<div id="modal" class="modal" onclick="this.style.display='none'">
-  <img src="" alt="Полноэкранное изображение" id="modal-img">
-</div>
+  <div id="map-container">
+    <div id="map-wrapper"></div>
+    <div id="filter-panel">
+      <label>Категория:
+        <select id="categoryFilter" onchange="applyCategoryFilter()">
+          <option value="">Все</option>
+        </select>
+      </label>
+    </div>
+  </div>
+
+  <div id="modal" class="modal" onclick="this.style.display='none'">
+    <img src="" alt="Полноэкранное изображение" id="modal-img">
+  </div>
 
 <script>
-  const container = document.getElementById('map-container');
-  const mapWrapper = document.getElementById('map-wrapper');
-  const modal = document.getElementById('modal');
-  const modalImg = document.getElementById('modal-img');
+const container = document.getElementById('map-container');
+const mapWrapper = document.getElementById('map-wrapper');
+const modal = document.getElementById('modal');
+const modalImg = document.getElementById('modal-img');
 
-  let scale = 1;
-  let originX = 0;
-  let originY = 0;
-  let isDragging = false;
-  let startX, startY;
-  let activeTooltip = null;
-  let activeMarker = null;
-  let initialPinchDistance = null;
-  let initialScale = 1;
-  let pinchCenter = null;
-  let pinchScreen = null;
-
-  const tileSize = 256;
+const tileSize = 256;
 const tilesX = 113;
 const tilesY = 113;
-const mapWidth = tileSize * tilesX; // 28928
+const mapWidth = tileSize * tilesX;
 const mapHeight = tileSize * tilesY;
-  const tileMap = {};
+const tileMap = {};
+let scale = 1, originX = 0, originY = 0;
+let isDragging = false, startX = 0, startY = 0;
+let initialPinchDistance = null, initialScale = 1;
+let pinchCenter = null, pinchScreen = null;
+let activeTooltip = null;
+let pointsData = [];
+let currentCategoryFilter = '';
 
-  function centerMap() {
-    const containerWidth = container.clientWidth;
-    const containerHeight = container.clientHeight;
-    originX = (containerWidth - mapWidth) / 2;
-    originY = (containerHeight - mapHeight) / 2;
-    updateTransform();
+function centerMap() {
+  const cw = container.clientWidth;
+  const ch = container.clientHeight;
+  originX = (cw - mapWidth) / 2;
+  originY = (ch - mapHeight) / 2;
+  updateTransform();
+}
+
+function renderTiles() {
+  const rect = container.getBoundingClientRect();
+  const viewLeft = -originX / scale;
+  const viewTop = -originY / scale;
+  const viewRight = viewLeft + rect.width / scale;
+  const viewBottom = viewTop + rect.height / scale;
+
+  const startX = Math.floor(viewLeft / tileSize);
+  const startY = Math.floor(viewTop / tileSize);
+  const endX = Math.ceil(viewRight / tileSize);
+  const endY = Math.ceil(viewBottom / tileSize);
+
+  for (const key in tileMap) {
+    const [x, y] = key.split(',').map(Number);
+    if (x < startX || x > endX || y < startY || y > endY) {
+      mapWrapper.removeChild(tileMap[key]);
+      delete tileMap[key];
+    }
   }
 
-  function renderTiles() {
-    const containerRect = container.getBoundingClientRect();
-    const viewLeft = -originX / scale;
-    const viewTop = -originY / scale;
-    const viewRight = viewLeft + containerRect.width / scale;
-    const viewBottom = viewTop + containerRect.height / scale;
+  for (let y = startY; y <= endY; y++) {
+    for (let x = startX; x <= endX; x++) {
+      if (x < 0 || y < 0 || x >= tilesX || y >= tilesY) continue;
+      const key = `${x},${y}`;
+      if (tileMap[key]) continue;
+      const tile = document.createElement('img');
+      tile.src = `tiles/tile_${x}_${y}.jpg`;
+      tile.className = 'tile';
+      tile.style.left = `${x * tileSize}px`;
+      tile.style.top = `${y * tileSize}px`;
+      mapWrapper.appendChild(tile);
+      tileMap[key] = tile;
+    }
+  }
+}
 
-    const startX = Math.floor(viewLeft / tileSize);
-    const startY = Math.floor(viewTop / tileSize);
-    const endX = Math.ceil(viewRight / tileSize);
-    const endY = Math.ceil(viewBottom / tileSize);
+function getIconColor(icon) {
+  const map = {
+    default: 'red',
+    blue: 'blue',
+    green: 'green',
+    yellow: 'gold',
+    black: '#000'
+  };
+  return map[icon] || map.default;
+}
 
-    // Remove old tiles
-    for (const key in tileMap) {
-      const [x, y] = key.split(',').map(Number);
-      if (x < startX || x > endX || y < startY || y > endY) {
-        mapWrapper.removeChild(tileMap[key]);
-        delete tileMap[key];
+function renderMarkers(points) {
+  document.querySelectorAll('.marker').forEach(m => m.remove());
+  document.querySelectorAll('.tooltip').forEach(t => t.remove());
+
+  points.forEach(point => {
+    if (currentCategoryFilter && point.category !== currentCategoryFilter) return;
+
+    const marker = document.createElement('div');
+    marker.className = 'marker';
+    marker.style.left = `${point.x}px`;
+    marker.style.top = `${point.y}px`;
+    marker.style.backgroundColor = getIconColor(point.icon || 'default');
+
+    const tooltip = document.createElement('div');
+    tooltip.className = 'tooltip';
+    tooltip.innerHTML = `
+      <img src="${point.image}" alt="Точка">
+      <p>${point.text}</p>
+    `;
+
+    const img = tooltip.querySelector('img');
+    img.onclick = (e) => {
+      e.stopPropagation();
+      modalImg.src = point.image;
+      modal.style.display = 'flex';
+    };
+
+    marker.onclick = (e) => {
+      e.stopPropagation();
+      if (activeTooltip && activeTooltip !== tooltip) activeTooltip.style.display = 'none';
+      if (tooltip.style.display === 'block') {
+        tooltip.style.display = 'none';
+        activeTooltip = null;
+      } else {
+        tooltip.style.display = 'block';
+        activeTooltip = tooltip;
       }
-    }
+      updateTooltipPosition();
+    };
 
-    // Add visible tiles
-    for (let y = startY; y <= endY; y++) {
-      for (let x = startX; x <= endX; x++) {
-        if (x < 0 || y < 0 || x >= tilesX || y >= tilesY) continue;
-        const key = `${x},${y}`;
-        if (tileMap[key]) continue;
-        const tile = document.createElement('img');
-        tile.src = `https://res.cloudinary.com/dypsj7tre/image/upload/tiles/tile_${x}_${y}.jpg`;
-        tile.className = 'tile';
-        tile.style.left = `${x * tileSize}px`;
-        tile.style.top = `${y * tileSize}px`;
-        mapWrapper.appendChild(tile);
-        tileMap[key] = tile;
-      }
-    }
+    mapWrapper.appendChild(marker);
+    document.body.appendChild(tooltip);
+    tooltip.dataset.x = point.x;
+    tooltip.dataset.y = point.y;
+  });
+
+  updateTooltipPosition();
+}
+
+function updateTooltipPosition() {
+  if (activeTooltip && activeTooltip.dataset.x) {
+    const x = parseFloat(activeTooltip.dataset.x);
+    const y = parseFloat(activeTooltip.dataset.y);
+    const screenX = originX + x * scale;
+    const screenY = originY + y * scale;
+    activeTooltip.style.left = `${screenX}px`;
+    activeTooltip.style.top = `${screenY + 60}px`;
   }
+}
 
-  function updateTransform() {
-    mapWrapper.style.transform = `translate(${originX}px, ${originY}px) scale(${scale})`;
-    document.querySelectorAll('.marker').forEach(m => {
-      m.style.transform = `scale(${1 / scale})`;
-    });
-    updateTooltipPosition();
-    renderTiles();
-  }
+function buildCategoryFilter(points) {
+  const select = document.getElementById('categoryFilter');
+  const categories = new Set();
+  points.forEach(p => {
+    if (p.category) categories.add(p.category);
+  });
+  [...categories].sort().forEach(cat => {
+    const opt = document.createElement('option');
+    opt.value = cat;
+    opt.textContent = cat;
+    select.appendChild(opt);
+  });
+}
 
-  function updateTooltipPosition() {
-    if (activeTooltip && activeTooltip.dataset.x && activeTooltip.dataset.y) {
-      const x = parseFloat(activeTooltip.dataset.x);
-      const y = parseFloat(activeTooltip.dataset.y);
-      const screenX = originX + x * scale;
-      const screenY = originY + y * scale;
-      activeTooltip.style.left = `${screenX}px`;
-      activeTooltip.style.top = `${screenY + 60}px`;
-    }
-  }
+function applyCategoryFilter() {
+  const select = document.getElementById('categoryFilter');
+  currentCategoryFilter = select.value;
+  renderMarkers(pointsData);
+}
 
-  fetch('points.json')
-    .then(res => res.json())
-    .then(points => {
-      points.forEach((point, i) => {
-        const marker = document.createElement('div');
-        marker.className = 'marker';
-        marker.style.left = `${point.x}px`;
-        marker.style.top = `${point.y}px`;
+function updateTransform() {
+  mapWrapper.style.transform = `translate(${originX}px, ${originY}px) scale(${scale})`;
+  document.querySelectorAll('.marker').forEach(m => {
+    m.style.transform = `scale(${1 / scale})`;
+  });
+  updateTooltipPosition();
+  renderTiles();
+}
 
-        const tooltip = document.createElement('div');
-        tooltip.className = 'tooltip';
-        tooltip.innerHTML = `
-          <img src="${point.image}" alt="Точка">
-          <p>${point.text}</p>
-        `;
-
-        const img = tooltip.querySelector('img');
-        img.addEventListener('click', (e) => {
-          e.stopPropagation();
-          modalImg.src = point.image;
-          modal.style.display = 'flex';
-        });
-
-        marker.addEventListener('click', (e) => {
-          e.stopPropagation();
-          if (activeTooltip && activeTooltip !== tooltip) {
-            activeTooltip.style.display = 'none';
-          }
-
-          if (tooltip.style.display === 'block') {
-            tooltip.style.display = 'none';
-            activeTooltip = null;
-            activeMarker = null;
-          } else {
-            tooltip.style.display = 'block';
-            activeTooltip = tooltip;
-            activeMarker = marker;
-          }
-          updateTooltipPosition();
-        });
-
-        mapWrapper.appendChild(marker);
-        document.body.appendChild(tooltip);
-
-        tooltip.dataset.x = point.x;
-        tooltip.dataset.y = point.y;
-      });
-    });
-
-  document.body.addEventListener('click', (e) => {
-    if (activeTooltip && !e.target.closest('.tooltip')) {
-      activeTooltip.style.display = 'none';
-      activeTooltip = null;
-      activeMarker = null;
-    }
+fetch('points.json')
+  .then(res => res.json())
+  .then(points => {
+    pointsData = points;
+    renderMarkers(points);
+    buildCategoryFilter(points);
   });
 
-  container.addEventListener('wheel', (e) => {
-    e.preventDefault();
-    const rect = container.getBoundingClientRect();
-    const offsetX = e.clientX - rect.left - originX;
-    const offsetY = e.clientY - rect.top - originY;
-    const delta = e.deltaY < 0 ? 1.1 : 0.9;
-    const newScale = scale * delta;
-    if (newScale < 0.2 || newScale > 6) return;
-    originX -= offsetX * (delta - 1);
-    originY -= offsetY * (delta - 1);
-    scale = newScale;
-    updateTransform();
-  }, { passive: false });
+container.addEventListener('wheel', (e) => {
+  e.preventDefault();
+  const rect = container.getBoundingClientRect();
+  const offsetX = e.clientX - rect.left - originX;
+  const offsetY = e.clientY - rect.top - originY;
+  const delta = e.deltaY < 0 ? 1.1 : 0.9;
+  const newScale = scale * delta;
+  if (newScale < 0.2 || newScale > 6) return;
+  originX -= offsetX * (delta - 1);
+  originY -= offsetY * (delta - 1);
+  scale = newScale;
+  updateTransform();
+}, { passive: false });
 
-  container.addEventListener('touchstart', (e) => {
-    if (e.touches.length === 2) {
-      initialPinchDistance = getDistance(e.touches[0], e.touches[1]);
-      initialScale = scale;
-      const rect = container.getBoundingClientRect();
-      const screenX = (e.touches[0].clientX + e.touches[1].clientX) / 2 - rect.left;
-      const screenY = (e.touches[0].clientY + e.touches[1].clientY) / 2 - rect.top;
-      pinchScreen = { x: screenX, y: screenY };
-      pinchCenter = {
-        x: (screenX - originX) / scale,
-        y: (screenY - originY) / scale
-      };
-    } else if (e.touches.length === 1) {
-      isDragging = true;
-      startX = e.touches[0].clientX - originX;
-      startY = e.touches[0].clientY - originY;
-    }
-  });
+container.addEventListener('mousedown', (e) => {
+  isDragging = true;
+  startX = e.clientX - originX;
+  startY = e.clientY - originY;
+  container.style.cursor = 'grabbing';
+});
+container.addEventListener('mousemove', (e) => {
+  if (!isDragging) return;
+  originX = e.clientX - startX;
+  originY = e.clientY - startY;
+  updateTransform();
+});
+container.addEventListener('mouseup', () => {
+  isDragging = false;
+  container.style.cursor = 'grab';
+});
 
-  container.addEventListener('touchmove', (e) => {
-    if (e.touches.length === 2 && initialPinchDistance !== null && pinchCenter && pinchScreen) {
-      const currentDistance = getDistance(e.touches[0], e.touches[1]);
-      const scaleFactor = currentDistance / initialPinchDistance;
-      const newScale = initialScale * scaleFactor;
-      if (newScale >= 0.5 && newScale <= 5) {
-        scale = newScale;
-        originX = pinchScreen.x - pinchCenter.x * scale;
-        originY = pinchScreen.y - pinchCenter.y * scale;
-        updateTransform();
-      }
-    } else if (e.touches.length === 1 && isDragging) {
-      originX = e.touches[0].clientX - startX;
-      originY = e.touches[0].clientY - startY;
-      updateTransform();
-    }
-  });
-
-  container.addEventListener('touchend', () => {
-    initialPinchDistance = null;
-    pinchCenter = null;
-    pinchScreen = null;
-    isDragging = false;
-  });
-
-  container.addEventListener('mousedown', (e) => {
-    e.preventDefault();
-    isDragging = true;
-    startX = e.clientX - originX;
-    startY = e.clientY - originY;
-    container.style.cursor = 'grabbing';
-  });
-
-  container.addEventListener('mousemove', (e) => {
-    if (!isDragging) return;
-    originX = e.clientX - startX;
-    originY = e.clientY - startY;
-    updateTransform();
-  });
-
-  container.addEventListener('mouseup', () => {
-    isDragging = false;
-    container.style.cursor = 'grab';
-  });
-
-  function getDistance(t1, t2) {
-    const dx = t2.clientX - t1.clientX;
-    const dy = t2.clientY - t1.clientY;
-    return Math.sqrt(dx * dx + dy * dy);
-  }
-
-  window.addEventListener('load', () => {
-    centerMap();
-    renderTiles();
-  });
+window.addEventListener('load', () => {
+  centerMap();
+  renderTiles();
+});
 </script>
 </body>
 </html>
